--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">Temel Komutlar Unite-3</string>
     <string name="uyg1_name">Uygulama 1 (Mantıksal Değişken)</string>
     <string name="uyg2_name">Uygulama 2 (Tam Sayılar)</string>
-    <string name="uyg3_name">Uygulama 3</string>
-    <string name="uyg4_name">Uygulama 4</string>
-    <string name="uyg5_name">Uygulama 5</string>
+    <string name="uyg3_name">Uygulama 3 (Char Veri Tipi)</string>
+    <string name="uyg4_name">Uygulama 4 (ASCII Kodu)</string>
+    <string name="uyg5_name">Uygulama 5 (Ondalıklı Sayılar)</string>
     <string name="uyg6_name">Uygulama 6</string>
     <string name="uyg7_name">Uygulama 7</string>
     <string name="uyg8_name">Uygulama 8</string>
