--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="uyg3_name">Uygulama 3 (Char Veri Tipi)</string>
     <string name="uyg4_name">Uygulama 4 (ASCII Kodu)</string>
     <string name="uyg5_name">Uygulama 5 (Ondalıklı Sayılar)</string>
-    <string name="uyg6_name">Uygulama 6</string>
-    <string name="uyg7_name">Uygulama 7</string>
+    <string name="uyg6_name">Uygulama 6 (final Sabit Tanımlama)</string>
+    <string name="uyg7_name">Uygulama 7 (Aritmetiksel Operatörler)</string>
     <string name="uyg8_name">Uygulama 8</string>
     <string name="uyg9_name">Uygulama 9</string>
     <string name="uyg10_name">Uygulama 10</string>
