--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="uyg5_name">Uygulama 5 (Ondalıklı Sayılar)</string>
     <string name="uyg6_name">Uygulama 6 (final Sabit Tanımlama)</string>
     <string name="uyg7_name">Uygulama 7 (Aritmetiksel Operatörler)</string>
-    <string name="uyg8_name">Uygulama 8</string>
+    <string name="uyg8_name">Uygulama 8 (Atama Operatörü)</string>
     <string name="uyg9_name">Uygulama 9</string>
     <string name="uyg10_name">Uygulama 10</string>
     <string name="uyg11_name">Uygulama 11</string>
