--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="uyg6_name">Uygulama 6 (final Sabit Tanımlama)</string>
     <string name="uyg7_name">Uygulama 7 (Aritmetiksel Operatörler)</string>
     <string name="uyg8_name">Uygulama 8 (Atama Operatörü)</string>
-    <string name="uyg9_name">Uygulama 9</string>
-    <string name="uyg10_name">Uygulama 10</string>
+    <string name="uyg9_name">Uygulama 9 (Karşılaştırma Operatörler)</string>
+    <string name="uyg10_name">Uygulama 10 (Mantıksal Operatörler)</string>
     <string name="uyg11_name">Uygulama 11</string>
     <string name="uyg12_name">Uygulama 12</string>
 </resources>
