--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="uyg10_name">Uygulama 10 (Mantıksal Operatörler)</string>
     <string name="uyg11_name">Uygulama 11</string>
     <string name="uyg12_name">Uygulama 12</string>
+
+    <string name="hint_sayi_gir">Bir sayı giriniz</string>
 </resources>
